Update link on example page.

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -39,7 +39,7 @@
           <img class="logo" src="assets/images/logo.png">
           <h1>genesis</h1>
         </header>
-        <p>This is a generated page using the <a href="https://magnus.sexy/genesis">genesis</a> boilerplate.</p>
+        <p>This is a generated page using the <a href="https://github.com/magnus-bergman/genesis">genesis</a> boilerplate.</p>
         <p>Below is a sample todo app built with react.</p>
       </article>
 
