Update meta description.

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -6,7 +6,7 @@
 
     <title>Genesis - A powerful boilerplate for building advanced web apps.</title>
 
-    <meta name="description" content="Page description. No longer than 155 characters.">
+    <meta name="description" content="Genesis - A powerful boilerplate for building advanced web apps.">
 
     <!-- Open Graph data -->
     <meta property="og:title" content="Genesis">
