Add support to build component specific css with webpack.

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -30,7 +30,7 @@
     <meta itemprop="description" content="A powerful boilerplate for building advanced web apps.">
     <meta itemprop="image" content="https://magnus.sexy/genesis/assets/images/banner.png">
 
-    <link rel="stylesheet" href="assets/styles/app.css">
+    <!-- inject-style src="public/assets/styles/main.css" -->
   </head>
 
   <body>
