Replace component specific css with styles using radium. Rewrite gulp with es2015 (es6). Drop normalize.css in favor of sanitize.css. Remove bower completely.

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
 
       <div id="todo-app" class="todo-app"></div>
 
-      <footer>
+      <footer class="footer">
         <p><small>Made with ♥ by <a href="https://magnus.sexy">Magnus Bergman</a></small></p>
       </footer>
     </main>
