--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" {% if(o.htmlWebpackPlugin.files.manifest) { %} manifest="{%= o.htmlWebpackPlugin.files.manifest %}"{% } %}>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Genesis - A powerful boilerplate for building advanced web apps.</title>
+    <title>{%=o.htmlWebpackPlugin.options.title || 'Genesis - A powerful boilerplate for building advanced web apps.'%}</title>
+
+    {% if (o.htmlWebpackPlugin.files.favicon) { %}
+      <link rel="shortcut icon" href="{%=o.htmlWebpackPlugin.files.favicon%}">
+    {% } %}
 
     <meta name="description" content="Genesis - A powerful boilerplate for building advanced web apps.">
 
@@ -30,6 +34,10 @@
     <meta itemprop="description" content="A powerful boilerplate for building advanced web apps.">
     <meta itemprop="image" content="https://magnus.sexy/genesis/assets/images/banner.png">
 
+    {% for (var css in o.htmlWebpackPlugin.files.css) { %}
+      <link href="{%=o.htmlWebpackPlugin.files.css[css] %}" rel="stylesheet">
+    {% } %}
+
     <!-- inject-style src="public/assets/styles/main.css" -->
   </head>
 
@@ -52,5 +60,8 @@
     </main>
 
     <script src="assets/scripts/app.js"></script>
+    {% for (var chunk in o.htmlWebpackPlugin.files.chunks) { %}
+      <script src="{%=o.htmlWebpackPlugin.files.chunks[chunk].entry %}" async></script>
+    {% } %}
   </body>
 </html>
