--- a/app/index.html
+++ b/app/index.html
@@ -1,67 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" {% if(o.htmlWebpackPlugin.files.manifest) { %} manifest="{%= o.htmlWebpackPlugin.files.manifest %}"{% } %}>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{%=o.htmlWebpackPlugin.options.title || 'Genesis - A powerful boilerplate for building advanced web apps.'%}</title>
+    <title>Genesis</title>
 
-    {% if (o.htmlWebpackPlugin.files.favicon) { %}
-      <link rel="shortcut icon" href="{%=o.htmlWebpackPlugin.files.favicon%}">
-    {% } %}
-
-    <meta name="description" content="Genesis - A powerful boilerplate for building advanced web apps.">
-
-    <!-- Open Graph data -->
-    <meta property="og:title" content="Genesis">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="https://magnus.sexy/genesis">
-    <meta property="og:image" content="https://magnus.sexy/genesis/assets/images/banner.png">
-    <meta property="og:description" content="A powerful boilerplate for building advanced web apps.">
-
-    <!-- Twitter Card data -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@mgnsbrgmn">
-    <meta name="twitter:title" content="Genesis">
-    <meta name="twitter:description" content="A powerful boilerplate for building advanced web apps.">
-    <meta name="twitter:creator" content="@mgnsbrgmn">
-    <!-- Twitter Summary card images must be at least 120x120px -->
-    <meta name="twitter:image" content="https://magnus.sexy/genesis/assets/images/banner.png">
-
-    <!-- Schema.org markup for Google+ -->
-    <meta itemprop="name" content="Genesis">
-    <meta itemprop="description" content="A powerful boilerplate for building advanced web apps.">
-    <meta itemprop="image" content="https://magnus.sexy/genesis/assets/images/banner.png">
-
-    {% for (var css in o.htmlWebpackPlugin.files.css) { %}
-      <link href="{%=o.htmlWebpackPlugin.files.css[css] %}" rel="stylesheet">
-    {% } %}
-
-    <!-- inject-style src="public/assets/styles/main.css" -->
+    <meta name="description" content="A powerful boilerplate for building advanced web apps.">
   </head>
 
   <body>
-    <main class="main">
-      <article class="introduction">
-        <header>
-          <img class="logo" src="assets/images/logo.png">
-          <h1>genesis</h1>
-        </header>
-        <p>This is a generated page using the <a href="https://github.com/magnus-bergman/genesis">genesis</a> boilerplate.</p>
-        <p>Below is a sample todo app built with react.</p>
-      </article>
+    <main class="main" id="app"></main>
 
-      <div id="todo-app" class="todo-app"></div>
-
-      <footer class="footer">
-        <p><small>Made with ♥ by <a href="https://magnus.sexy">Magnus Bergman</a></small></p>
-      </footer>
-    </main>
-
-    <script src="assets/scripts/app.js"></script>
-    {% for (var chunk in o.htmlWebpackPlugin.files.chunks) { %}
-      <script src="{%=o.htmlWebpackPlugin.files.chunks[chunk].entry %}" async></script>
-    {% } %}
+    <script src="assets/scripts/app.js" async></script>
   </body>
 </html>
