Update dev enviroment info in readme.md.

--- a/app/index.template.html
+++ b/app/index.template.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Genesis">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://magnus.sexy/genesis">
-    <meta property="og:image" content="https://magnus.sexy/genesis/images/banner.png">
+    <meta property="og:image" content="https://cloud.githubusercontent.com/assets/1064654/12119058/a5ee8914-b3c9-11e5-8505-f28b70ee3391.png">
     <meta property="og:description" content="A powerful boilerplate for building advanced web apps.">
 
     <!-- Twitter Card data -->
@@ -23,12 +23,12 @@
     <meta name="twitter:description" content="A powerful boilerplate for building advanced web apps.">
     <meta name="twitter:creator" content="@mgnsbrgmn">
     <!-- Twitter Summary card images must be at least 120x120px -->
-    <meta name="twitter:image" content="https://magnus.sexy/genesis/images/banner.png">
+    <meta name="twitter:image" content="https://cloud.githubusercontent.com/assets/1064654/12119058/a5ee8914-b3c9-11e5-8505-f28b70ee3391.png">
 
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Genesis">
     <meta itemprop="description" content="A powerful boilerplate for building advanced web apps.">
-    <meta itemprop="image" content="https://magnus.sexy/genesis/images/banner.png">
+    <meta itemprop="image" content="https://cloud.githubusercontent.com/assets/1064654/12119058/a5ee8914-b3c9-11e5-8505-f28b70ee3391.png">
   </head>
   <body>
     <div id="root"></div>
