--- a/app/index.template.html
+++ b/app/index.template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <base href="http://genesishq.github.io/genesis/">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +13,7 @@
     <!-- Open Graph data -->
     <meta property="og:title" content="Genesis">
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://magnus.sexy/genesis">
+    <meta property="og:url" content="http://genesishq.github.io/genesis/">
     <meta property="og:image" content="https://cloud.githubusercontent.com/assets/1064654/12119058/a5ee8914-b3c9-11e5-8505-f28b70ee3391.png">
     <meta property="og:description" content="A powerful boilerplate for building advanced web apps.">
 
